# quoptuna

./: .coderabbit.yaml  .cruft.json  .env.example  .gitignore  .pre-commit-config.yaml  .sesskey  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FRONTEND_ARCHITECTURE.md  FRONTEND_QUICK_REFERENCE.md  GITHUB_SETTINGS_GUIDE.md  LICENSE  Makefile  README.md  README_NEXT.md  RUN_WITHOUT_DOCKER.md  SECURITY.md  TESTING.md  coverage.xml  docker-compose.yml  index.html  junit.xml  mkdocs.yml  objects.inv  pyproject copy.toml  pyproject.toml  pyproject_poetry_transition_backup.toml  sitemap.xml  test-docs-build.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: README.md  autofix.yml  codeflash-optimize.yaml  codeql.yml  cookiecutter.yml  dependencies.yml  docs-dev.yml  docs-preview.yml  docs-versioned.yml  docs.yml  draft_release.yml  lint.yml  release-and-publish.yml  release.yml  test.yml  update-uv-lock.yml
.streamlit/: config.toml
api/: api-docs.html  api-reference.html
architecture/: frontend-architecture-diagram.html  frontend-architecture.html  new-frontend-design.html  optimizer-architecture.html
backend/: Dockerfile  prompt.txt  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: analysis.py  data.py  optimize.py  workflows.py
backend/app/core/: config.py
backend/app/services/: dataset_registry.py  workflow_service.py
backend/tests/: conftest.py  test_models_banknote.py  test_optimization_config_integration.py
blogs/: README.md
blogs/academic/: arxiv-abstract.md  outreach-emails.md
blogs/assets/: README.md
blogs/dev-to/: article.md
blogs/hacker-news/: README.md  show-hn.md
blogs/hashnode/: article.md
blogs/joss/: submission-notes.md
blogs/linkedin/: article.md  post.md
blogs/medium-tds/: article.md
blogs/product-hunt/: listing.md
blogs/quantum-community/: optuna-showcase.md  pennylane-forum.md  qc-stackexchange.md
blogs/reddit/: r-machinelearning.md  r-opensource.md  r-python.md  r-quantumcomputing.md
blogs/twitter-x/: launch-thread.md
configuration/: github-pages-setup.html  github-settings-guide.html
db/: CrystalData.db
dev/: 404.html  IMPLEMENTATION_ROADMAP.html  OPTIMIZER_ARCHITECTURE.html  WORKFLOW_TESTING.html  api_docs.html  api_reference.html  changelog.html  examples.html  index.html  objects.inv  sitemap.xml  user_guide.html
dev/api/: api-docs.html  api-reference.html
dev/architecture/: frontend-architecture-diagram.html  frontend-architecture.html  new-frontend-design.html  optimizer-architecture.html
dev/configuration/: github-pages-setup.html  github-settings-guide.html
dev/development/: implementation-summary.html  testing-checklist.html  workflow-testing.html
dev/examples/: examples.html
dev/getting-started/: quickstart.html  quoptuna-next.html  run-without-docker.html
dev/guides/: frontend-quick-reference.html  streamlit-guide.html  user-guide.html  workflow-builder-guide.html
dev/roadmap/: implementation-roadmap.html
dev/search/: search_index.js  search_index.json
development/: implementation-summary.html  testing-checklist.html  workflow-testing.html
docs/: README.md  WORKFLOW_TESTING.md  about-docs.md  api_docs.md  examples.md  index.md  user_guide.md
docs-site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
docs/api/: api-reference.md
docs/architecture/: frontend-architecture-diagram.md  frontend-architecture.md  new-frontend-design.md  optimizer-architecture.md
docs/configuration/: github-pages-setup.md
docs/development/: implementation-summary.md  testing-checklist.md
docs/getting-started/: quickstart.md  run-without-docker.md
docs/guides/: frontend-quick-reference.md  github-settings-guide.md  optimization-performance-and-search-quality.md  python-api-guide.md  samplers-and-pruning.md  streamlit-guide.md  user-guide.md  workflow-builder-guide.md
docs/roadmap/: implementation-roadmap.md
examples/: examples.html
experiments/: test.ipynb
experiments/basic_dataset_test/: optimize_log.txt  report.md  test.py  test1.ipynb  test_143.ipynb  test_176.ipynb  test_225.ipynb  test_267.ipynb  test_45.ipynb  test_adult.ipynb  test_analcatdata_creditscore.ipynb  test_corral.ipynb  test_credit_a.ipynb  test_iono.ipynb  test_matminer.ipynb  test_new_data_test.ipynb  test_plmb.ipynb  test_shap.ipynb  test_shapBankNote.ipynb  test_shapBlood.ipynb  test_shapstatlog.ipynb
frontend/: .env.example  .gitignore  README.md  biome.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: AuthGate.tsx  Sidebar.tsx  UserMenu.tsx
frontend/lib/: api.ts  appSettings.ts  hooks.ts  settings.ts  wizardStorage.ts
frontend/src/: App.tsx  index.css
frontend/types/: plotly.d.ts
getting-started/: quickstart.html  quoptuna-next.html  run-without-docker.html
guides/: frontend-quick-reference.html  samplers-and-pruning.html  streamlit-guide.html  user-guide.html  workflow-builder-guide.html
latest/: 404.html  IMPLEMENTATION_ROADMAP.html  OPTIMIZER_ARCHITECTURE.html  WORKFLOW_TESTING.html  api_docs.html  api_reference.html  changelog.html  examples.html  index.html  objects.inv  sitemap.xml  user_guide.html
latest/api/: api-docs.html  api-reference.html
latest/architecture/: frontend-architecture-diagram.html  frontend-architecture.html  (+2 more)
roadmap/: implementation-roadmap.html
search/: search_index.js  search_index.json
tests/: conftest.py  test_api.py  test_cli.py  test_create_model.py  test_data_preparation.py  test_data_preparation_extended.py  test_data_utils.py  test_encoding.py  test_fairness.py  test_fairness_search.py  test_log_file.py  test_model_utils_callback.py  test_multiclass.py  test_optimizer.py  test_xai.py  test_xai_extended.py
(+286 files in other folders)
