[tool.poetry]
name = "quoptuna"
version = "0.0.2"
description = "quoptuna is a proposed open-source project that combines quantum computing with Optuna's hyperparameter optimization framework."
authors = [
    "Edwin Jose <edwinjose900@gmail.com>",
]
license = "MIT"
readme = "README.md"

documentation = "https://Qentora.github.io/quoptuna"
homepage = "https://Qentora.github.io/quoptuna"
repository = "https://github.com/Qentora/quoptuna"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "quoptuna", from = "src" }
]
include = [ "src/quoptuna/*", "src/quoptuna/**/*"]
[tool.poetry.dependencies]
python = ">=3.10, <4.0"
pennylane = "^0.38.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
jax = "^0.4.31"
jaxlib = "^0.4.31"
flax = "^0.9.0"
optax = "^0.2.3"
pandas = "^2.2.2"
seaborn = "^0.13.2"
scipy = "^1.14.1"
optuna = "^4.0.0"
optuna-dashboard = "^0.16.2"
streamlit = "^1.38.0"
python-fasthtml = "^0.6.9"
streamlit-elements = "^0.1.0"
plotly = "^5.24.1"
pydantic = "^2.9.2"
shap = "^0.46.0"


[tool.poetry.group.dev.dependencies]
mkdocstrings = {version = ">=0.23", extras = ["python"]}
mkdocs-material = "*"
mypy = "*"
pre-commit = "*"
pymdown-extensions = "*"
pytest = "*"
pytest-github-actions-annotate-failures = "*"
pytest-cov = "*"
python-kacl = "*"
ruff = ">=0.2.0"

[tool.poetry.scripts]
quoptuna = "quoptuna.frontend.app:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38" # The lowest supported version

[tool.ruff.lint]
# By default, enable all the lint rules.
# Add to the ignore list below if you don't want some rules.
# If you need some ignores for certain modules, see tool.ruff.lint.per-file-ignores below.
# For individual ignore cases, prefer inline `# noqa`s within the code.
select = ["ALL"]
ignore = [
    "ANN",      # Type hints related, let mypy handle these.
    "D",        # Docstrings related, way too strict to our taste
    "COM812",   # Added to ignore list
    "ISC001",   # Added to ignore list
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",     # "Use of `assert` detected"
    "ARG",      # "Unused function argument". Fixtures are often unused.
    "S105",     # "Possible hardcoded password".
]
"src/quoptuna/backend/base/pennylane_models/**" = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "classmethod",
    "pydantic.validator",
    "pydantic.root_validator",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
console_output_style = "progress"
filterwarnings = ["ignore::DeprecationWarning", "ignore::ResourceWarning"]
log_cli = true
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


[tool.coverage.report]
fail_under = 100
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "normal"
disable_error_code = ["type-var"]
namespace_packages = true
mypy_path = "quoptuna"
ignore_missing_imports = true
disallow_any_unimported = false
exclude = "src/quoptuna/backend/base/pennylane_models/.*"

# If you need to ignore something for some specific module,
# add overrides for them. Avoid changing the global config!
# For example:
[[tool.mypy.overrides]]
module = [
  "src.quoptuna.backend.base.pennylane_models.*",
  "src.quoptuna.backend.base.pennylane_models.*.*"
]
ignore_missing_imports = true

# [[tool.mypy.overrides]]
# module = [
#   "tests/my_thing/test_my_thing",
# ]
# disallow_untyped_defs = false
