[project]
name = "quoptuna-backend"
version = "2.0.0"
description = "FastAPI backend for QuOptuna Next"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "optuna>=4.0.0",
    "pennylane==0.44.1",
    "jax==0.7.1",
    "jaxlib==0.7.1",
    "optax==0.2.3",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.24.0,<2.0.0",
    "shap>=0.46.0",
    "matplotlib>=3.9.0",
    "langchain>=0.3.0",
    "langchain-core>=1.3.3",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "ucimlrepo>=0.0.3",
]

# PEP 735 dependency group (installed by default by `uv run`/`uv sync`), so
# tools like `cd backend && uv run mypy` resolve without an explicit extra.
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.6.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Run tests across CPU cores (-n auto, per-test distribution) and cap any
# single test that hangs.
addopts = "-n auto --timeout=300"
markers = [
    "slow: long-running quantum model fits (deselect with '-m \"not slow\"')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
